First setup monorepo

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "npm run build --workspace=app",
     "start": "npm run start --workspace=api",
-    "dev:api": "npm run build --workspace=app && npm run dev --workspace=api",
+    "dev:api": "npm run build && npm run dev --workspace=api",
     "test:api": "npm run start:test --workspace=api"
   },
   "keywords": [],
