--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "npm run build --workspace=app",
     "start": "npm run start --workspace=api",
     "dev:api": "npm run build && npm run dev --workspace=api",
-    "test:api": "npm run start:test --workspace=api"
+    "test:api": "npm run start:test --workspace=api",
+    "lint": "eslint ./api ./app"
   },
   "keywords": [],
   "author": "",
@@ -40,7 +41,8 @@
     ],
     "ignorePatterns": [
       "dist",
-      ".eslintrc.cjs"
+      ".eslintrc.cjs",
+      "cypress"
     ],
     "parserOptions": {
       "ecmaVersion": "latest",
@@ -52,9 +54,11 @@
       }
     },
     "plugins": [
-      "react-refresh"
+      "react-refresh",
+      "jest"
     ],
     "rules": {
+      "react/prop-types": "off",
       "react-refresh/only-export-components": [
         "warn",
         {
@@ -65,6 +69,7 @@
   },
   "devDependencies": {
     "eslint": "^8.45.0",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
