--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,7 @@
     "jsonwebtoken": "9.0.2",
     "mongoose": "7.6.1",
     "mongoose-unique-validator": "4.0.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "6.9.7"
   },
   "jest": {
     "testEnvironment": "node"
