--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
