--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "npm run build --workspace=app",
     "start": "npm run start --workspace=api",
     "dev:api": "npm run build && npm run dev --workspace=api",
+    "dev:app": "npm run dev --workspace=app",
     "test:api": "npm run start:test --workspace=api",
     "lint": "eslint ./api ./app"
   },
